--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="accueil">
 
         <div class="image-box">
-        <img src="/Max.jpg"alt="Photo profil de Max Angelot NATOUX" class="profile-image">
+        <img src="./Max.jpg"alt="Photo profil de Max Angelot NATOUX" class="profile-image">
         <div class="white-corner"></div>
         </div>
 
